# book-fuse-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-linux.sh  build-win.bat
dependencies/libs/windows/: yaml-cppd.lib
engine/: CMakeLists.txt
engine/src/: fuse2d.h  pch.cpp  pch.h
engine/src/assets/: animation.h  asset.h  asset_instance.h  asset_registry.h  asset_serializer.h  audio.h  font.h  registry.h  serializer.h  texture.h  tilemap.h
engine/src/core/: application.cpp  application.h  dispatcher.h  entry.h  event.h  inputs.cpp  inputs.h  typeid.cpp  typeid.h
engine/src/ecs/: ecs.h  entity.h  registry.h  scene.h  serializer.h  system.h
engine/src/ecs/components/: behaviour.h  common.h  graphics.h  physics.h
engine/src/ecs/systems/: animation_system.h  collision_system.h  frame_animation_system.h  rigidbody_system.h  script_system.h  sprite_renderer_system.h  system_instance.h  test_system.h  text_renderer_system.h  tilemap_renderer_system.h
engine/src/events/: system.h
engine/src/fuse/core/: application.cpp  application.h  entry.h
engine/src/helpers/: yaml.h
engine/src/math/: math.h  random.h  transform2.h  vec2.h
engine/src/physics/: rigidbody2.h
engine/src/scene/: scene_instance.h  scene_serializer.h
engine/src/scripts/: fuse_script.h  game_controller.h  pipe_spawner.h  player_controller.h  script_instance.h  scrolling_ground.h
game/: CMakeLists.txt
game/src/: game.cpp
resource/: scene.yaml
